--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -17,7 +17,8 @@ body{
 
 
 #error-msg-container{
-    background-color: red;
+    padding:5px;
+    text-align: center;
     height: 40px;
     width:100%;
 }
