--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,5 +1,6 @@
 body{
-    background-image: url('https://rvca738f6h5tbwmj3mxylox3-wpengine.netdna-ssl.com/wp-content/uploads/2017/06/ALMY_CP9E2D_OttawaParlimentHill.jpg');
+    /*background-image: url('https://rvca738f6h5tbwmj3mxylox3-wpengine.netdna-ssl.com/wp-content/uploads/2017/06/ALMY_CP9E2D_OttawaParlimentHill.jpg');*/
+    background-color: #E8E9EB;
 }
 
 .login-card{
