--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,6 +1,8 @@
 body{
-    /*background-image: url('https://rvca738f6h5tbwmj3mxylox3-wpengine.netdna-ssl.com/wp-content/uploads/2017/06/ALMY_CP9E2D_OttawaParlimentHill.jpg');*/
-    background-color: #E8E9EB;
+    background-image: url('https://fthmb.tqn.com/atGYf5Szeg2I_jZUcypsUxEr1lo=/960x0/filters:no_upscale()/GettyImages-182789593-5976401e9abed500113e1705.jpg');
+    /*background-color: #E8E9EB;*/
+    /*filter:blur(5px);*/
+    background-size: cover;
 }
 
 .login-card{
