--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@
   color: white;
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+    max-width: 100%;
+    box-sizing: border-box;
+    -webkit-font-smoothing: subpixel-antialiased;
+}
+
 .App-title {
   font-size: 1.5em;
 }
