made a whole buncha stuff

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,9 +1,9 @@
 body{
-    background-image: url('https://fthmb.tqn.com/atGYf5Szeg2I_jZUcypsUxEr1lo=/960x0/filters:no_upscale()/GettyImages-182789593-5976401e9abed500113e1705.jpg');
+    /*background-image: url('https://fthmb.tqn.com/atGYf5Szeg2I_jZUcypsUxEr1lo=/960x0/filters:no_upscale()/GettyImages-182789593-5976401e9abed500113e1705.jpg');*/
     /*background-color: #E8E9EB;*/
     /*filter:blur(5px);*/
-    background-size: cover;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
+    background-color: #ededed;
 }
 
 .login-card{
