--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -14,3 +14,10 @@
 .restau-card {
     border: none;
 }
+
+.nav-bar-btn {
+    display: inline-block;
+}
+.nav-btn-group{
+    display: inline-flex;
+}
