finishing touches for now

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -19,3 +19,11 @@
     background-position: 0% 100%;
     min-height: 300px;
 }
+
+body{
+    font-family: 'Fira Sans', sans-serif;
+}
+
+.btn, .form-control {
+    border-radius: 25px;
+}
