--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -12,6 +12,10 @@ body{
     background-color: rgba(0,0,0,0.5);
 }
 
+.card-rating {
+    margin-bottom: -20px !important;
+}
+
 .card {
     background-color: rgba(255,255,255,0.8);
 }
